# frequenz-sdk-python

./: .cookiecutter-replay.json  .darglint  .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  latest-dev  minimum-requirements-ci.txt  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py  v1-pre  versions.json
.github/: dependabot.yml  keylabeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yaml  dco-merge-queue.yml  labeler.yml  release-notes-check.yml  release_notes_check.yml
benchmarks/data_ingestion/: benchmark_microgrid_data.py
benchmarks/power_distribution/: power_distributor.py
benchmarks/timeseries/: benchmark_datasourcing.py  benchmark_ringbuffer.py  periodic_feature_extractor.py  resampling.py  ringbuffer_memusage.py  ringbuffer_serialization.py  serializable_ringbuffer.py
benchmarks/util/: benchmark_ringbuffer.py
docs/: SUMMARY.md  index.md  mkdocstrings_autoapi.py
docs/_scripts/: macros.py  mkdocstrings_autoapi.py
docs/css/: style.css
docs/intro/: actors.md  glossary.md  index.md
docs/tutorials/: getting_started.md  pv_optimization.md
docs/user-guide/: formula-engine.md  glossary.md  microgrid-concepts.md
examples/: __init__.py  battery_pool.py  battery_status.py  power_distribution.py  resampling.py  sdk_resampling_example.py  sdk_usage_example.py
latest/: 404.html  index.html
latest-dev/: 404.html
latest-dev/CONTRIBUTING/: index.html
latest-dev/SUMMARY/: index.html
latest-dev/_overrides/: main.html
latest-dev/user-guide/: index.html
latest-pre/: 404.html  index.html
latest-pre/CONTRIBUTING/: index.html
latest-pre/overrides/: main.html
latest-pre/user-guide/: index.html
latest/CONTRIBUTING/: index.html
latest/SUMMARY/: index.html
latest/overrides/: main.html
next/: 404.html  index.html  objects.inv  sitemap.xml
next/CONTRIBUTING/: index.html
next/SUMMARY/: index.html
next/_scripts/: macros.py
next/css/: mkdocstrings.css
next/intro/: index.html
next/search/: search_index.json
next/user-guide/: index.html
src/: conftest.py
tests/: __init__.py  check-style.py  conftest.py  test_import_all_integration.py  test_microgrid_data_no_unnecessary_computations.py  test_sdk.py
tests/actor/: __init__.py  test_actor.py  test_background_service.py  test_batteries_status.py  test_battery_pool.py  test_battery_pool_status.py  test_battery_status.py  test_channel_registry.py  test_component_metrics_resampling_actor.py  test_config_manager.py  test_data_sourcing.py  test_decorator.py  test_power_distributing.py  test_resampling.py  test_run_utils.py
tests/api_client/: __init__.py  test_api_client.py
tests/config/: __init__.py  test_config.py  test_config_manager.py
tests/configs/: __init__.py  test_config.py  test_config_manager.py
tests/data_ingestion/: __init__.py  base_microgrid_data_test.py  test_formulas.py  test_gen_component_receivers.py  test_group_timeseries_resampler.py  test_microgrid_data.py  test_microgrid_data_config_formula_updates.py  test_microgrid_data_config_updates.py  test_microgrid_data_grid_load.py  test_microgrid_data_overlapping_formulas.py  test_microgrid_data_with_custom_formula.py  test_microgrid_data_with_division_by_zero.py  test_microgrid_data_with_ev_charger.py  test_microgrid_data_with_missing_symbols.py  test_ring_buffer.py  test_timeseries_resampler.py
tests/microgrid/: __init__.py  fixtures.py  mock_api.py  test_battery_status.py  test_client.py  test_component.py  test_component_data.py  test_connection.py  test_datapipeline.py  test_graph.py  test_grid.py  test_microgrid_api.py  test_mock_api.py  test_retry.py  test_timeout.py
tests/model/: __init__.py  test_integration.py  test_model_manager.py
tests/power/: __init__.py  test_distribution_algorithm.py
tests/power_distribution/: __init__.py  test_distribution_algorithm.py  test_power_distributor.py
tests/test_data_handling/: __init__.py  test_formula.py  test_gen_historic_data_features.py  test_handle_historic_data.py  test_power.py  test_time_series.py
tests/test_microgrid/: __init__.py  mock_api.py  test_client.py  test_component.py  test_component_data.py  test_connection.py  test_graph.py  test_microgrid_api.py  test_mock_api.py  test_retry.py  test_timeout.py
tests/timeseries/: __init__.py  mock_datapipeline.py  mock_microgrid.py  mock_resampler.py  test_base_types.py  test_consumer.py  test_ev_charger_pool.py  test_formula_engine.py  test_formula_formatter.py  test_frequency_streaming.py  test_logical_meter.py  test_moving_window.py  test_periodic_feature_extractor.py  test_producer.py  test_quantities.py  test_resampling.py  test_ringbuffer.py  test_ringbuffer_serialization.py  test_serializable_ringbuffer.py  test_voltage_streamer.py
tests/utils/: __init__.py  _a_sequence.py  component_data_streamer.py  component_data_wrapper.py  component_graph_utils.py  data_generation.py  factories.py  graph_generator.py  mock_microgrid.py  mock_microgrid_client.py  receive_timeout.py  ringbuffer.py  sdk_interface.py
v0/: index.html
v0.12/: 404.html  index.html  objects.inv
v0.12/css/: style.css
v0.13/CONTRIBUTING/: index.html
v0.13/SUMMARY/: index.html
v0.13/search/: search_index.json
v0.14/: 404.html
v0.14/CONTRIBUTING/: index.html
v0.14/SUMMARY/: index.html
v0.14/overrides/: main.html
v0.14/search/: search_index.json
v0.15/: 404.html  index.html  objects.inv  sitemap.xml
v0.15/search/: search_index.json
v0.16/: 404.html  index.html  mkdocstrings_autoapi.py
v0.16/CONTRIBUTING/: index.html
v0.16/SUMMARY/: index.html
v0.17/: 404.html  sitemap.xml
v0.18/: 404.html  index.html  objects.inv
v0.19/: 404.html  index.html
v0.20/: 404.html  index.html  objects.inv
v0.21/: objects.inv
v0.22/: 404.html
v0.23/: index.html  mkdocstrings_autoapi.py
v0.24/: 404.html  objects.inv
v0.25/: 404.html  index.html  objects.inv
v1-dev/: 404.html  index.html
v1-pre/: 404.html
v1.0-dev/: 404.html  index.html  objects.inv
v1.0-pre/: 404.html  index.html  objects.inv
(+770 files in other folders)
