# License: MIT
# Copyright © 2022 Frequenz Energy-as-a-Service GmbH

[build-system]
requires = [
  "setuptools == 68.1.0",
  "setuptools_scm[toml] == 7.1.0",
  "frequenz-repo-config[lib] == 0.5.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "frequenz-sdk"
description = "A development kit to interact with the Frequenz development platform"
readme = "README.md"
license = { text = "MIT" }
keywords = ["frequenz", "python", "lib", "library", "sdk", "microgrid"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">= 3.11, < 4"
dependencies = [
  "frequenz-api-microgrid >= 0.15.1, < 0.16.0",
  # Make sure to update the mkdocs.yml file when
  # changing the version
  # (plugins.mkdocstrings.handlers.python.import)
  "frequenz-channels >= 0.16.0, < 0.17.0",
  "google-api-python-client >= 2.71, < 3",
  "grpcio >= 1.54.2, < 2",
  "grpcio-tools >= 1.54.2, < 2",
  "networkx >= 2.8, < 4",
  "numpy >= 1.24.2, < 2",
  "protobuf >= 4.21.6, < 5",
  "pydantic >= 1.9, < 2",
  "tqdm >= 4.38.0, < 5",
  "typing_extensions >= 4.4.0, < 5",
  "watchfiles >= 0.15.0",
]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.optional-dependencies]
dev-docstrings = [
  "pydocstyle == 6.3.0",
  "darglint == 1.8.1",
  "tomli == 2.0.1",      # Needed by pydocstyle to read pyproject.toml
]
dev-examples = ["polars == 0.18.15"]
dev-formatting = ["black == 23.7.0", "isort == 5.12.0"]
dev-mkdocs = [
  "mike == 1.1.2",
  "mkdocs-gen-files == 0.5.0",
  "mkdocs-literate-nav == 0.6.0",
  "mkdocs-material == 9.2.5",
  "mkdocs-section-index == 0.3.5",
  "mkdocstrings[python] == 0.22.0",
  "frequenz-repo-config[lib] == 0.5.2",
]
dev-mypy = [
  "mypy == 1.5.1",
  "grpc-stubs == 1.24.12",      # This dependency introduces breaking changes in patch releases
  "types-protobuf == 4.24.0.1",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-sdk[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-noxfile = ["nox == 2023.4.22", "frequenz-repo-config[lib] == 0.5.2"]
dev-pylint = [
  "pylint == 2.17.5",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-sdk[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-pytest = [
  "pytest == 7.4.0",
  "frequenz-repo-config[extra-lint-examples] == 0.5.2",
  "pytest-mock == 3.11.1",
  "pytest-asyncio == 0.21.1",
  "time-machine == 2.12.0",
  "async-solipsism == 0.5",
  # For checking docstring code examples
  "sybil == 5.0.3",
  "pylint == 2.17.5",
  "frequenz-sdk[dev-examples]",
]
dev = [
  "frequenz-sdk[dev-mkdocs,dev-docstrings,dev-formatting,dev-mkdocs,dev-mypy,dev-noxfile,dev-pylint,dev-pytest]",
]

[project.urls]
Changelog = "https://github.com/frequenz-floss/frequenz-sdk-python/releases"
Issues = "https://github.com/frequenz-floss/frequenz-sdk-python/issues"
Repository = "https://github.com/frequenz-floss/frequenz-sdk-python"
Support = "https://github.com/frequenz-floss/frequenz-sdk-python/discussions/categories/support"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["benchmarks", "examples", "src", "tests"]

[tool.pylint.similarities]
ignore-comments = ['yes']
ignore-docstrings = ['yes']
ignore-imports = ['no']
min-similarity-lines = 40

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
  # pylint's unsubscriptable check is buggy and is not needed because
  # it is a type-check, for which we already have mypy.
  "unsubscriptable-object",
]

[tool.pylint.design]
max-attributes = 12

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-mock"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
no_incremental = true
packages = ["frequenz.sdk"]
strict = true

[[tool.mypy.overrides]]
module = [
  "async_solipsism",
  "async_solipsism.*",
  "grpc.aio",
  "grpc.aio.*",
  # There is a stubs package available, but it's not working:
  # https://github.com/eggplants/networkx-stubs/issues/1
  "networkx",
  "sybil",
  "sybil.*",
]
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
