# License: MIT
# Copyright © 2022 Frequenz Energy-as-a-Service GmbH

[build-system]
requires = [
  "setuptools == 68.1.0",
  "setuptools_scm[toml] == 7.1.0",
  "frequenz-repo-config[lib] == 0.6.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "frequenz-sdk"
description = "A development kit to interact with the Frequenz development platform"
readme = "README.md"
license = { text = "MIT" }
keywords = ["frequenz", "python", "lib", "library", "sdk", "microgrid"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">= 3.11, < 4"
dependencies = [
  "frequenz-api-microgrid >= 0.15.1, < 0.16.0",
  # Make sure to update the mkdocs.yml file when
  # changing the version
  # (plugins.mkdocstrings.handlers.python.import)
  "frequenz-channels >= 0.16.0, < 0.17.0",
  "google-api-python-client >= 2.71, < 3",
  "grpcio >= 1.54.2, < 2",
  "grpcio-tools >= 1.54.2, < 2",
  "networkx >= 2.8, < 4",
  "numpy >= 1.24.2, < 2",
  "protobuf >= 4.21.6, < 5",
  "pydantic >= 2.3, < 3",
  "tqdm >= 4.38.0, < 5",
  "typing_extensions >= 4.6.1, < 5",
  "watchfiles >= 0.15.0",
]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.optional-dependencies]
dev-flake8 = [
  "flake8 == 6.1.0",
  "flake8-docstrings == 1.7.0",
  "flake8-pyproject == 1.2.3",  # For reading the flake8 config from pyproject.toml
  "pydoclint == 0.3.3",
  "pydocstyle == 6.3.0",
]
dev-examples = ["polars == 0.19.3"]
dev-formatting = ["black == 23.9.1", "isort == 5.12.0"]
dev-mkdocs = [
  "mike == 1.1.2",
  "mkdocs-gen-files == 0.5.0",
  "mkdocs-literate-nav == 0.6.1",
  "mkdocs-macros-plugin == 1.0.4",
  "mkdocs-material == 9.3.1",
  "mkdocstrings[python] == 0.23.0",
  "frequenz-repo-config[lib] == 0.6.1",
]
dev-mypy = [
  "mypy == 1.5.1",
  "grpc-stubs == 1.24.12",              # This dependency introduces breaking changes in patch releases
  "types-Markdown == 3.4.2.10",
  "types-PyYAML == 6.0.12.12",
  "types-Pygments == 2.16.0.0",
  "types-colorama == 0.4.15.12",
  "types-protobuf == 4.24.0.2",
  "types-python-dateutil == 2.8.19.14",
  "types-pytz == 2023.3.1.1",
  "types-setuptools == 68.2.0.0",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-sdk[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-noxfile = ["nox == 2023.4.22", "frequenz-repo-config[lib] == 0.6.1"]
dev-pylint = [
  "pylint == 2.17.5",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-sdk[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-pytest = [
  "pytest == 7.4.2",
  "frequenz-repo-config[extra-lint-examples] == 0.6.1",
  "pytest-mock == 3.11.1",
  "pytest-asyncio == 0.21.1",
  "time-machine == 2.12.0",
  "async-solipsism == 0.5",
  # For checking docstring code examples
  "frequenz-sdk[dev-examples]",
]
dev = [
  "frequenz-sdk[dev-mkdocs,dev-flake8,dev-formatting,dev-mkdocs,dev-mypy,dev-noxfile,dev-pylint,dev-pytest]",
]

[project.urls]
Changelog = "https://github.com/frequenz-floss/frequenz-sdk-python/releases"
Issues = "https://github.com/frequenz-floss/frequenz-sdk-python/issues"
Repository = "https://github.com/frequenz-floss/frequenz-sdk-python"
Support = "https://github.com/frequenz-floss/frequenz-sdk-python/discussions/categories/support"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["benchmarks", "examples", "src", "tests"]

[tool.flake8]
# We give some flexibility to go over 88, there are cases like long URLs or
# code in documenation that have extra indentation. Black will still take care
# of making everything that can be 88 wide, 88 wide.
max-line-length = 100
extend-ignore = [
  "E203", # Whitespace before ':' (conflicts with black)
  "W503", # Line break before binary operator (conflicts with black)
]
# pydoclint options
style = "google"
allow-init-docstring = true
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
check-return-types = false
check-yield-types = false

[tool.pylint.similarities]
ignore-comments = ['yes']
ignore-docstrings = ['yes']
ignore-imports = ['no']
min-similarity-lines = 40

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
  # pylint's unsubscriptable check is buggy and is not needed because
  # it is a type-check, for which we already have mypy.
  "unsubscriptable-object",
  # Checked by flake8
  "line-too-long",
  "unused-variable",
  "unnecessary-lambda-assignment",
]

[tool.pylint.design]
max-attributes = 12

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-mock"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
no_incremental = true
packages = ["frequenz.sdk"]
strict = true

[[tool.mypy.overrides]]
module = [
  "async_solipsism",
  "async_solipsism.*",
  "grpc.aio",
  "grpc.aio.*",
  "mkdocs_macros.*",
  # The available stubs packages are outdated or incomplete (WIP/experimental):
  # https://github.com/frequenz-floss/frequenz-sdk-python/issues/430
  "networkx",
  "sybil",
  "sybil.*",
]
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
