# License: MIT
# Copyright © 2022 Frequenz Energy-as-a-Service GmbH

[build-system]
requires = [
  "setuptools == 69.0.3",
  "setuptools_scm[toml] == 8.0.4",
  "frequenz-repo-config[lib] == 0.9.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "frequenz-sdk"
description = "A development kit to interact with the Frequenz development platform"
readme = "README.md"
license = { text = "MIT" }
keywords = ["frequenz", "python", "lib", "library", "sdk", "microgrid"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">= 3.11, < 4"
dependencies = [
  # Make sure to update the mkdocs.yml file when
  # changing the version
  # (plugins.mkdocstrings.handlers.python.import)
  "frequenz-client-microgrid >= 0.4.0, < 0.5.0",
  "frequenz-channels >= 1.0.0-rc1, < 2.0.0",
  "networkx >= 2.8, < 4",
  "numpy >= 1.26.4, < 2",
  "typing_extensions >= 4.6.1, < 5",
]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.optional-dependencies]
dev-flake8 = [
  "flake8 == 7.0.0",
  "flake8-docstrings == 1.7.0",
  "flake8-pyproject == 1.2.3",  # For reading the flake8 config from pyproject.toml
  "pydoclint == 0.4.1",
  "pydocstyle == 6.3.0",
]
dev-examples = ["polars == 0.20.31"]
dev-formatting = ["black == 24.4.2", "isort == 5.13.2"]
dev-mkdocs = [
  "black == 24.4.2",
  "Markdown==3.6",
  "mike == 2.1.1",
  "mkdocs-gen-files == 0.5.0",
  "mkdocs-literate-nav == 0.6.1",
  "mkdocs-macros-plugin == 1.0.5",
  "mkdocs-material == 9.5.26",
  "mkdocstrings[python] == 0.25.1",
  "frequenz-repo-config[lib] == 0.9.2",
]
dev-mypy = [
  "mypy == 1.10.0",
  "types-Markdown == 3.6.0.20240316",
  "types-protobuf == 5.26.0.20240422",
  "types-setuptools == 70.0.0.20240524",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-sdk[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-noxfile = ["nox == 2024.4.15", "frequenz-repo-config[lib] == 0.9.2"]
dev-pylint = [
  "pylint == 3.2.3",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-sdk[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-pytest = [
  "pytest == 8.2.2",
  "frequenz-repo-config[extra-lint-examples] == 0.9.2",
  "pytest-mock == 3.14.0",
  "pytest-asyncio == 0.23.7",
  "time-machine == 2.12.0",
  "async-solipsism == 0.6",
  # For checking docstring code examples
  "frequenz-sdk[dev-examples]",
  "hypothesis == 6.103.1",
]
dev = [
  "frequenz-sdk[dev-mkdocs,dev-flake8,dev-formatting,dev-mkdocs,dev-mypy,dev-noxfile,dev-pylint,dev-pytest]",
]

[project.urls]
Documentation = "https://frequenz-floss.github.io/frequenz-sdk-python/"
Changelog = "https://github.com/frequenz-floss/frequenz-sdk-python/releases"
Issues = "https://github.com/frequenz-floss/frequenz-sdk-python/issues"
Repository = "https://github.com/frequenz-floss/frequenz-sdk-python"
Support = "https://github.com/frequenz-floss/frequenz-sdk-python/discussions/categories/support"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["benchmarks", "examples", "src", "tests"]

[tool.flake8]
# We give some flexibility to go over 88, there are cases like long URLs or
# code in documenation that have extra indentation. Black will still take care
# of making everything that can be 88 wide, 88 wide.
max-line-length = 100
extend-ignore = [
  "E203", # Whitespace before ':' (conflicts with black)
  "W503", # Line break before binary operator (conflicts with black)
]
# pydoclint options
style = "google"
check-return-types = false
check-yield-types = false
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
allow-init-docstring = true

[tool.pylint.similarities]
ignore-comments = ['yes']
ignore-docstrings = ['yes']
ignore-imports = ['no']
min-similarity-lines = 40

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  "too-many-return-statements",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
  # pylint's unsubscriptable check is buggy and is not needed because
  # it is a type-check, for which we already have mypy.
  "unsubscriptable-object",
  # Checked by flake8
  "redefined-outer-name",
  "unused-import",
  "line-too-long",
  "redefined-outer-name",
  "unnecessary-lambda-assignment",
  "unused-import",
  "unused-variable",
]

[tool.pylint.design]
max-attributes = 12

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-mock"]
markers = [
  "integration: integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
# This option disables mypy cache, and it is sometimes useful to enable it if
# you are getting weird intermittent error, or error in the CI but not locally
# (or vice versa). In particular errors saying that type: ignore is not
# used but getting the original ignored error when removing the type: ignore.
# See for example: https://github.com/python/mypy/issues/2960
no_incremental = true
packages = ["frequenz.sdk"]
strict = true

[[tool.mypy.overrides]]
module = [
  "async_solipsism",
  "async_solipsism.*",
  "mkdocs_macros.*",
  # The available stubs packages are outdated or incomplete (WIP/experimental):
  # https://github.com/frequenz-floss/frequenz-sdk-python/issues/430
  "networkx",
]
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
