[metadata]
name = frequenz-sdk
author = Frequenz Energy-as-a-Service GmbH

[options]
install_requires =
    frequenz-api-microgrid >= 0.11.0, < 0.12.0
    frequenz-channels >= 0.10.0, < 0.11.0
    google-api-python-client >= 2.15, < 3
    grpcio >= 1.47, < 2
    grpcio-tools >= 1.47, < 2
    networkx >= 2.8, < 3
    pandas >= 1.3.5, < 2
    protobuf >= 3.20, < 4
    pyarrow >= 6.0.0, < 6.1
    pydantic >= 1.9
    pytz >= 2021.3
    sympy >= 1.10.1, < 2
    toml >= 0.10
    tqdm >= 4.38.0, < 5
    watchfiles >= 0.15.0
package_dir =
    = src
include_package_data = True
packages = find_namespace:
python_requires = >= 3.8, < 4

[options.packages.find]
where = src
